--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="public/images/durka.jpg" class="card-img-top">
+        <img src="public/images/shevchuk.jpeg" class="card-img-top">
         <div class="card-body">
-          <h2 class="card-title h5">Как доказать врачам, что масоны...</h2>
+          <h2 class="card-title h5">Что такое осень?</h2>
         </div>
       </div>
     </div>
