--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
               <a class="dropdown-item" href="#">Образование</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">18+</a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li>
-              <a class="dropdown-item" href="https://github.com/Melodyn/web-bugs" target="_blank">Github</a>
+              <a class="dropdown-item" href="#">Юмор</a>
             </li>
           </ul>
         </li>
